feat: frontend mvp finish

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -86,3 +86,4 @@ $card-border-width: 0px !default;
 $card-border-radius: 0px !default;
 
 @import 'bootstrap/scss/bootstrap.scss';
+@import 'vue-select/src/scss/vue-select.scss';
